Version 2.02.92 - 
====================================
  Initialize monitoring support only for thin pools and skip thin volumes.
  Make conversion from a synced 'mirror' to 'raid1' not cause a full resync.
  Properly test buffer for unit check in units_to_bytes().
  Add configure --with-systemdsystemunitdir.
  Add check for allocation failure in _build_matcher().
  Add check for rimage name allocation failure in _raid_add_images().
  Add check for mda_copy failure in _text_pv_setup().
  Add check for _mirrored_init_target failure.
  Add free_orphan_vg.
  Skip pv/vg_set_fid processing if the fid is same.
  Check for foreach loop errors in _vg_read_orphans() (2.02.91).
  Clean error paths for format instance creation (2.02.91).
  Release vg in error path of _format1_vg_read() instead of just free().
  Report allocation failure for allocation of PV structure.
  Add clvmd init dependency on dlm service when running with new corosync.

Version 2.02.91 - 12th February 2012
====================================
  Remove PV-based format instances (which are no longer needed).
  Link all orphan PVs directly to a per-format global orphan VG.
  Refactor lvmcache around an internal API.
  Stop processing lvextend if trying to extend a mirror that is being recovered.
  Add pool_below_threshold() function to check thin pool percent status.
  Fix test for snap percent for failing merge when removing LV.
  Switch int to void return for str_list_del().
  Fix error path handling in _build_desc().
  Add range test for device number in _scan_proc_dev().
  Use signed long for sysconf() call in cmirrord.
  Do not write in front of log buffer in print_log().
  Add boundary test for number of mirror devs and logs.
  Check that whole locking_dir fits _lock_dir buffer in init_file_locking().
  Use list functions for label_exit().
  Ensure strncpy() function always ends with '\0'.
  Set status in _fsadm_cmd() for error path.